@@ -1,0 +1,32 @@
+#! /usr/bin/perl
+
+
+################################################################################
+#
+# runOnlineConverter
+# ------------------
+#
+# 07/24/2008 Philipp Schieferdecker <philipp.schieferdecker@cern.ch>
+################################################################################
+
+
+my $cmd = 
+    "java " .
+    "-cp ext/ojdbc14.jar:lib/cmssw-evf-confdb-gui.jar " .
+    "confdb.converter.OnlineConverter ";
+
+while (@ARGV)
+{
+    my $arg = shift @ARGV;
+    if    ($arg eq "--configName") { $cmd = $cmd . "-c " . shift @ARGV; }
+    elsif ($arg eq "--dType")      { $cmd = $cmd . "-t " . shift @ARGV; }
+    elsif ($arg eq "--dbHost")     { $cmd = $cmd . "-h " . shift @ARGV; }
+    elsif ($arg eq "--dbPort")     { $cmd = $cmd . "-p " . shift @ARGV; }
+    elsif ($arg eq "--dbName")     { $cmd = $cmd . "-d " . shift @ARGV; }
+    elsif ($arg eq "--dbUser")     { $cmd = $cmd . "-u " . shift @ARGV; }
+    elsif ($arg eq "--dbPwrd")     { $cmd = $cmd . "-s " . shift @ARGV; }
+}
+
+print $cmd . "\n";
+system($cmd);
+
